<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.thales.chaos</groupId>
    <artifactId>chaosengine</artifactId>
    <version>1.2.0-SNAPSHOT</version>
    <profiles>
        <profile>
            <id>openapi</id>
            <modules>
                <module>chaosengine-integration</module>
            </modules>
        </profile>
    </profiles>
    <modules>
        <module>chaosengine-experiments</module>
        <module>chaosengine-core</module>
        <module>chaosengine-launcher</module>
        <module>chaosengine-notifications</module>
        <module>chaosengine-schedule</module>
        <module>chaosengine-test-utilities</module>
    </modules>
    <packaging>pom</packaging>

    <name>chaos-engine</name>
    <description>Implement Chaos in various environments</description>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <organization>
        <name>Thales</name>
        <url>https://www.thalesgroup.com</url>
    </organization>

    <developers>
        <developer>
            <id>lpetr</id>
            <name>Lubor PETR</name>
            <email>lubor.petr@thalesgroup.com</email>
            <url>https://github.com/luborpetr</url>
            <organization>Thales DIS</organization>
            <organizationUrl>https://www.thalesgroup.com/en/markets/digital-identity-and-security</organizationUrl>
            <roles>
                <role>project owner</role>
                <role>developer</role>
            </roles>
            <timezone>Europe/Prague</timezone>
        </developer>
        <developer>
            <id>10056952</id>
            <name>Andrew MANTHA</name>
            <email>andrew.mantha@thalesgroup.com</email>
            <url>https://github.com/a-mantha</url>
            <organization>Thales DIS</organization>
            <organizationUrl>https://www.thalesgroup.com/en/markets/digital-identity-and-security</organizationUrl>
            <roles>
                <role>architect</role>
                <role>developer</role>
            </roles>
            <timezone>America/Toronto</timezone>
        </developer>
    </developers>

    <contributors>
        <contributor>
            <name>Eric MUELLENBACH</name>
            <email>eric.muellenbach@thalesgroup.com></email>
            <url>https://github.com/3r1co</url>
            <organization>Thales DIS</organization>
            <organizationUrl>https://www.thalesgroup.com/en/markets/digital-identity-and-security</organizationUrl>
            <roles>
                <role>developer</role>
            </roles>
            <timezone>Europe/Paris</timezone>
        </contributor>
    </contributors>

    <scm>
        <connection>scm:git:git://github.com/gemalto/chaos-engine.git</connection>
        <developerConnection>scm:git:ssh://git@github.com/gemalto/chaos-engine.git</developerConnection>
        <url>https://github.com/gemalto/chaos-engine.git</url>
    </scm>

    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/gemalto/chaos-engine/issues</url>
    </issueManagement>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.1.4.RELEASE</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>11</java.version>
        <aws.sdk.version>1.11.357</aws.sdk.version>
        <spring-cloud.version>2.1.3.RELEASE</spring-cloud.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.cloud</groupId>
            <artifactId>spring-cloud-starter-vault-config</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

        <!-- SSH Client Library-->
        <dependency>
            <groupId>com.hierynomus</groupId>
            <artifactId>sshj</artifactId>
            <version>0.27.0</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.awaitility/awaitility -->
        <dependency>
            <groupId>org.awaitility</groupId>
            <artifactId>awaitility</artifactId>
            <version>3.0.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>net.logstash.logback</groupId>
            <artifactId>logstash-logback-encoder</artifactId>
            <version>6.2</version>
        </dependency>

        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.2.3</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/commons-net/commons-net -->
        <dependency>
            <groupId>commons-net</groupId>
            <artifactId>commons-net</artifactId>
            <version>3.6</version>
        </dependency>


        <!-- https://mvnrepository.com/artifact/org.reflections/reflections -->
        <dependency>
            <groupId>org.reflections</groupId>
            <artifactId>reflections</artifactId>
            <version>0.9.11</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>com.thales.chaos</groupId>
            <artifactId>chaosengine-test-utilities</artifactId>
            <version>${project.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-ui</artifactId>
            <version>1.2.0</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-test</artifactId>
            <scope>test</scope>
        </dependency>

    </dependencies>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.amazonaws</groupId>
                <artifactId>aws-java-sdk-bom</artifactId>
                <version>${aws.sdk.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-vault-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
        </dependencies>
    </dependencyManagement>


    <build>
        <plugins>
            <plugin>
                <artifactId>maven-clean-plugin</artifactId>
                <executions>
                    <execution>
                        <id>auto-clean</id>
                        <phase>initialize</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>
        </plugins>

        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <configuration>
                        <attach>false</attach>
                        <descriptors>
                            <descriptor>src/assembly/bin.xml</descriptor>
                        </descriptors>
                    </configuration>
                    <executions>
                        <execution>
                            <id>assemble</id>
                            <phase>package</phase>
                            <goals>
                                <goal>single</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

</project>